Rework `get_contact_details()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,dense_rank)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,if_any)
 importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
@@ -26,8 +27,11 @@ importFrom(purrr,iwalk)
 importFrom(purrr,list_assign)
 importFrom(purrr,list_flatten)
 importFrom(purrr,list_rbind)
+importFrom(purrr,list_transpose)
 importFrom(purrr,map)
+importFrom(purrr,map_chr)
 importFrom(purrr,map_vec)
+importFrom(purrr,negate)
 importFrom(purrr,partial)
 importFrom(purrr,reduce)
 importFrom(purrr,set_names)
