--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,13 +21,13 @@ importFrom(glue,glue)
 importFrom(glue,glue_collapse)
 importFrom(jsonlite,parse_json)
 importFrom(jsonlite,toJSON)
-importFrom(purrr,imap)
 importFrom(purrr,iwalk)
 importFrom(purrr,list_assign)
 importFrom(purrr,list_flatten)
 importFrom(purrr,list_rbind)
 importFrom(purrr,list_transpose)
 importFrom(purrr,map)
+importFrom(purrr,map2_vec)
 importFrom(purrr,map_vec)
 importFrom(purrr,partial)
 importFrom(purrr,reduce)
