Restore attributes/classes in `enumerate()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,5 +67,6 @@ importFrom(tidyselect,any_of)
 importFrom(tidyselect,starts_with)
 importFrom(vctrs,vec_duplicate_any)
 importFrom(vctrs,vec_group_id)
+importFrom(vctrs,vec_restore)
 importFrom(yaml,as.yaml)
 importFrom(yaml,yaml.load)
