--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,plm)
 export(Plume)
 export(PlumeQuarto)
 export(enumerate)
+export(orcid)
 export(plm_push)
 export(plm_template)
 export(sequential)
