--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(jsonlite,toJSON)
 importFrom(purrr,iwalk)
 importFrom(purrr,list_assign)
 importFrom(purrr,list_flatten)
+importFrom(purrr,list_modify)
 importFrom(purrr,list_rbind)
 importFrom(purrr,list_transpose)
 importFrom(purrr,map)
