--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,12 @@ Type: Package
 Package: plume
 Title: A Simple Author Handler for Scientific Writing
 Version: 0.1.0
-Authors@R: 
+Authors@R: c(
     person("Arnaud", "Gallou", , "agallou.gh@gmail.com", role = c("aut", "cre", "cph"),
-           comment = c(ORCID = "0000-0002-1002-4247"))
+           comment = c(ORCID = "0000-0002-1002-4247")),
+    person("Hadley", "Wickham", role = "cph",
+           comment = "Author of included stringb functions.")
+  )
 Description: Tools to reduce the hassle of handling and formatting author
     information in scientific writing.
 License: GPL (>= 3)
