--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Package: plume
 Title: A Simple Author Handler for Scientific Writing
 Version: 0.1.0
 Authors@R: c(
-    person("Arnaud", "Gallou", , "agallou.gh@gmail.com", role = c("aut", "cre", "cph"),
+    person("Arnaud", "Gallou", , "arangacas@gmail.com", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0000-0002-1002-4247")),
     person("Hadley", "Wickham", role = "cph",
            comment = "Author of included stringb functions.")
