Return CRediT roles in alphabetical order

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(sequential)
 export(set_default_names)
 importFrom(R6,R6Class)
 importFrom(dplyr,across)
+importFrom(dplyr,arrange)
 importFrom(dplyr,dense_rank)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
