Add context selectors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ S3method(print,plm_icon)
 export(Plume)
 export(PlumeQuarto)
 export(enumerate)
+export(everyone)
+export(everyone_but)
 export(orcid)
 export(plm_template)
 export(sequential)
