Reference `everyone()` and `everyone_but()`

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -14,6 +14,8 @@ reference:
   - title: Helpers
     contents:
       - enumerate
+      - everyone
+      - everyone_but
       - orcid
       - plm_template
       - sequential
