--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,9 +9,9 @@ Authors@R: c(
            comment = "Author of included stringb functions.")
   )
 Description: Handles and formats author information in scientific writing
-    in R Markdown and Quarto.  'plume' provides easy-to-use and flexible
-    tools for injecting author metadata in YAML headers as well as
-    generating author and contribution lists (among others) as strings
+    in 'R Markdown' and 'Quarto'. 'plume' provides easy-to-use and
+    flexible tools for injecting author metadata in 'YAML' headers as well
+    as generating author and contribution lists (among others) as strings
     from tabular data.
 License: GPL (>= 3)
 URL: https://github.com/arnaudgallou/plume,
