--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Imports:
     glue (>= 1.3.2),
     jsonlite (>= 1.6.0),
     knitr (>= 1.40),
+    lifecycle (>= 1.0.3),
     purrr (>= 1.0.0),
     R6,
     readr (>= 1.0.0),
