--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,8 +47,8 @@ importFrom(rlang,":=")
 importFrom(rlang,abort)
 importFrom(rlang,caller_arg)
 importFrom(rlang,caller_env)
+importFrom(rlang,enexprs)
 importFrom(rlang,expr)
-importFrom(rlang,exprs)
 importFrom(rlang,is_bool)
 importFrom(rlang,is_named)
 importFrom(rlang,is_string)
