--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,7 +48,6 @@ importFrom(rlang,abort)
 importFrom(rlang,caller_arg)
 importFrom(rlang,caller_env)
 importFrom(rlang,enexprs)
-importFrom(rlang,expr)
 importFrom(rlang,is_bool)
 importFrom(rlang,is_named)
 importFrom(rlang,is_string)
@@ -69,6 +68,7 @@ importFrom(tidyselect,any_of)
 importFrom(tidyselect,starts_with)
 importFrom(vctrs,vec_duplicate_any)
 importFrom(vctrs,vec_group_id)
+importFrom(vctrs,vec_rank)
 importFrom(vctrs,vec_restore)
 importFrom(yaml,as.yaml)
 importFrom(yaml,yaml.load)
