Silent lifecyle import note

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(glue,glue)
 importFrom(glue,glue_collapse)
 importFrom(jsonlite,parse_json)
 importFrom(jsonlite,toJSON)
+importFrom(lifecycle,deprecated)
 importFrom(purrr,iwalk)
 importFrom(purrr,list_assign)
 importFrom(purrr,list_modify)
