Minor tweaks to helpers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,7 +39,6 @@ importFrom(purrr,map2_vec)
 importFrom(purrr,map_vec)
 importFrom(purrr,partial)
 importFrom(purrr,reduce)
-importFrom(purrr,set_names)
 importFrom(purrr,walk2)
 importFrom(readr,read_file)
 importFrom(readr,write_lines)
@@ -54,6 +53,7 @@ importFrom(rlang,is_bool)
 importFrom(rlang,is_named)
 importFrom(rlang,is_string)
 importFrom(rlang,is_true)
+importFrom(rlang,set_names)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(tibble,as_tibble)
@@ -61,7 +61,6 @@ importFrom(tibble,as_tibble_row)
 importFrom(tibble,rowid_to_column)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
-importFrom(tidyr,expand_grid)
 importFrom(tidyr,nest)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,unnest)
