Implement `set_main_contributors()` (#40)

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,8 +6,9 @@ reference:
   - title: Classes
     contents:
       - PlumeQuarto
-      - StatusSetterQuarto
+      - StatusSetterPlumeQuarto
       - Plume
+      - StatusSetterPlume
       - StatusSetter
       - PlumeHandler
       - NameHandler
