--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,14 @@ importFrom(rlang,is_true)
 importFrom(rlang,set_names)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(stringr,fixed)
+importFrom(stringr,regex)
+importFrom(stringr,str_extract)
+importFrom(stringr,str_extract_all)
+importFrom(stringr,str_remove_all)
+importFrom(stringr,str_replace)
+importFrom(stringr,str_replace_all)
+importFrom(stringr,str_split_1)
 importFrom(tibble,as_tibble)
 importFrom(tibble,as_tibble_row)
 importFrom(tibble,rowid_to_column)
