--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ importFrom(rlang,current_env)
 importFrom(rlang,enexprs)
 importFrom(rlang,have_name)
 importFrom(rlang,is_bool)
+importFrom(rlang,is_call)
 importFrom(rlang,is_named)
 importFrom(rlang,is_string)
 importFrom(rlang,is_true)
