--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,plm)
 S3method(print,plm_icon)
 export(Plume)
 export(PlumeQuarto)
+export(as_lines)
 export(credit_roles)
 export(enumerate)
 export(everyone)
