--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(credit_roles)
 export(enumerate)
 export(everyone)
 export(everyone_but)
+export(icn_orcid)
 export(orcid)
 export(plm_template)
 export(sequential)
