--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(purrr,reduce)
 importFrom(readr,read_file)
 importFrom(readr,write_lines)
 importFrom(rlang,":=")
+importFrom(rlang,.data)
 importFrom(rlang,caller_arg)
 importFrom(rlang,caller_env)
 importFrom(rlang,current_env)
