--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(print,plm)
 S3method(print,plm_icon)
+S3method(print,plm_list)
 export(Plume)
 export(PlumeQuarto)
 export(as_lines)
@@ -11,6 +12,7 @@ export(everyone)
 export(everyone_but)
 export(icn_orcid)
 export(orcid)
+export(plm_symbols)
 export(plm_template)
 export(sequential)
 export(set_default_names)
