Add constructor aliases

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(enumerate)
 export(everyone)
 export(everyone_but)
 export(icn_orcid)
+export(new_plume)
+export(new_plume_quarto)
 export(orcid)
 export(plm_symbols)
 export(plm_template)
